--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
               <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
             </p>
           </main>
+          <footer class="mt-auto text-white-50">
+            <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+          </footer>
     </div>
     </body>
 </html>
